[gd_scene load_steps=4 format=3 uid="uid://dprd1uvkpgvjh"]

[ext_resource type="Script" path="res://source/Main Menu/main_menu.gd" id="1_xdf3f"]
[ext_resource type="Script" path="res://source/Follow Mouse/parallax_layer.gd" id="2_vg2pl"]
[ext_resource type="Texture2D" uid="uid://dr0ly4ka8vqd2" path="res://source/BackgroundImage/istockphoto-1354982067-612x612.jpg" id="3_d2dbo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdf3f")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -33.0
offset_right = 29.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="CenterContainer3" type="CenterContainer" parent="BoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BoxContainer/VBoxContainer/CenterContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Galaxy Wars

"

[node name="CenterContainer" type="CenterContainer" parent="BoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "High Score"

[node name="CenterContainer2" type="CenterContainer" parent="BoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BoxContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Button" type="Button" parent="BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Mulai"

[node name="Button2" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Keluar"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(0, 730)
script = ExtResource("2_vg2pl")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
position = Vector2(642, 360)
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_d2dbo")

[connection signal="pressed" from="BoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
